Исправлены стили при перестройке макетов, удалена лишняя переменная

--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "devDependencies": {
     "@htmlacademy/editorconfig-cli": "1.x",
     "autoprefixer": "8.3.x",
-    "browser-sync": "^2.24.4",
+    "browser-sync": "^2.24.5",
     "eslint": "^5.0.0",
     "eslint-config-google": "^0.9.1",
-    "gulp": "^4.0.0",
+    "gulp": "^3.0.0",
     "gulp-plumber": "1.2.x",
     "gulp-postcss": "7.0.x",
     "gulp-sass": "4.0.x",
@@ -41,6 +41,7 @@
   },
   "dependencies": {
     "jshint": "^2.9.5",
-    "normalize.css": "^8.0.0"
+    "normalize.css": "^8.0.0",
+    "normalize.scss": "^0.1.0"
   }
 }
